# libmvas

./: CMakeLists.txt  Readme.md
include/: segment.h  vas.h
include/mvas/: segment.h  vas.h
src/: segment.c  vas.c
